US16125 - Contentful Seed Data Functional data seed task

--- a/.env-sample
+++ b/.env-sample
@@ -1,4 +1,4 @@
-CONTENTFUL_SPACE_ID=
-CONTENTFUL_MANAGEMENT_ACCESS_TOKEN=
-MIGRATION_PATH=migrations
-CONTENTFUL_ENV=
+export CONTENTFUL_SPACE_ID="..."
+export CONTENTFUL_MANAGEMENT_ACCESS_TOKEN="..."
+export MIGRATION_PATH="migrations"
+export CONTENTFUL_ENV="..."
