--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: ruby
 cache: bundler
 rvm:
   - 2.4.3
-script: bundle exec rake contentful_migrations:ci
+script: bundle exec rspec spec && bundle exec rake contentful_migrations:ci
